crates/datarig-tui/tests/snapshots/flows_plan__plan_timeline_en_80x24.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(80, 24).backend()"
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1▎SELECT * FROM t;  ✓ plan · 3ms · 14:03            │"
"│    ▸ analytics       ││                                                      │"
"│    ▸ public          ││                                                      │"
"│    ▸ shop            ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      │╰──────────────────────────────────────────────────────╯"
"│                      │╭ Plan · Timeline ─────────────────────────────────────╮"
"│                      ││  Result 1  [Plan]  Messages                      H/L │"
"│                      ││ … [Timeline] … execution 82.4 ms · planning 0.824 ms │"
"│                      ││ ░ to the first row ·… 0           40.3 ms    80.5 ms │"
"│                      ││ Seq Scan on zz_custo… ░█████████████████████████████ │"
"│                      ││   InitPlan 3: Result  █                              │"
"│                      ││     InitPlan 2: Limit █                              │"
"│                      ││       Index Only Sca… █                              │"
"│                      ││   SubPlan 1: Aggrega… █ per loop ×250                │"
"│                      ││     Bitmap Heap Scan… █ per loop ×250                │"
"│                      ││       Bitmap Index S… █ per loop ×250                │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms   │ Enter detail · v views EN "
