crates/datarig-tui/tests/snapshots/flows_plan__plan_tree_estimates_en_160x45.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(160, 45).backend()"
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ×                                                                                                          "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg                        ││ local-pg / datarig  127.0.0.1:55432 · policy: default                                    Space c s switch connection │"
"│  ▾ datarig default                   ││  1 SELECT 1;                                                                                                         │"
"│    ▸ analytics                       ││  2▎SELECT * FROM t WHERE a > 1;                                                                                      │"
"│    ▸ public                          ││                                                                                                                      │"
"│    ▸ shop                            ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      │╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"│                                      │╭ Plan · Tree ─────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│                                      ││  Result 1  [Plan]  Messages                                                                                          │"
"│                                      ││ [Tree]  Summary   Icicle   Flame   Treemap   Raw                               estimated cost, not time (no ANALYZE) │"
"│                                      ││ Node                                                                    est rows  self cost total cost share         │"
"│                                      ││ ▾ Sort                                                                         4          0       4985 ▏          <1%│"
"│                                      ││ └─▾ HashAggregate                                                              4        875       4985 █▋         17%│"
"│                                      ││   └─▾ Hash Join                                                           116.6k        320       4110 ▋           6%│"
"│                                      ││     ├── Seq Scan on zz_orders o hot                                       116.6k       3774       3774 ██████▉    75%│"
"│                                      ││     └─▾ Hash                                                                1000          0         16             0%│"
"│                                      ││       └── Seq Scan on zz_customers c                                        1000         16         16 ▏          <1%│"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms                                  │ i type · Ctrl+E run · Tab next pane · : commands · F1 help · Space more EN "
