crates/datarig-tui/tests/snapshots/flows_plan__plan_tree_estimates_en_80x24.snap
---
source: crates/datarig-tui/tests/flows_plan.rs
expression: "h.draw(80, 24).backend()"
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1 SELECT 1;                                         │"
"│    ▸ analytics       ││  2▎SELECT * FROM t WHERE a > 1;  ✓ plan · 3ms · 14:03│"
"│    ▸ public          ││                                                      │"
"│    ▸ shop            ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      │╰──────────────────────────────────────────────────────╯"
"│                      │╭ Plan · Tree ─────────────────────────────────────────╮"
"│                      ││  Result 1  [Plan]  Messages                      H/L │"
"│                      ││ [Tree] …       estimated cost, not time (no ANALYZE) │"
"│                      ││ Node                         self cost share         │"
"│                      ││ ▾ Sort                               0 ▏          <1%│"
"│                      ││ └─▾ HashAggregate                  875 █▋         17%│"
"│                      ││   └─▾ Hash Join                    320 ▋           6%│"
"│                      ││     ├── Seq Scan on zz… hot       3774 ██████▉    75%│"
"│                      ││     └─▾ Hash                         0             0%│"
"│                      ││       └── Seq Scan on zz_c…         16 ▏          <1%│"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 1 row · 3ms      │ i type · Ctrl+E run EN "
